# sentc-api-dashboard

./: .gitignore
client/sentc/: .env.sample  .eslintignore  .gitignore  README.md  nuxt.build.ts  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
client/sentc/components/: ErrorEvent.vue
client/sentc/components/App/: AppCreate.vue  AppFileOptions.vue  AppGroupOptions.vue  AppOptions.vue
client/sentc/components/Customer/: Captcha.vue  CustomerMenu.vue  Delete.vue  EmailValidation.vue
client/sentc/layouts/: app.vue  default.vue
client/sentc/middleware/: getUser.ts  groupAccess.ts
client/sentc/pages/: index.vue  login.vue  register.vue
client/sentc/pages/app/: create.vue  index.vue
client/sentc/pages/app/_appId/: file_options.vue  group_options.vue  index.vue  jwt.vue  options.vue  token.vue
client/sentc/pages/customer/: index.vue  password.vue  update.vue
client/sentc/pages/customer/validation/: pw_reset.vue  register.vue
client/sentc/pages/group/: create.vue  index.vue
client/sentc/pages/group/_groupId/: create_app.vue  index.vue  member.vue  update.vue
client/sentc/plugins/: axios-accessor.ts  initWasm.ts
client/sentc/store/app/: App.ts
client/sentc/store/customer/: Customer.ts
client/sentc/store/event/: ErrorEvent.ts
client/sentc/store/group/: Group.ts
client/sentc/utils/: api.ts  types.ts  utils.ts
client/sentc/utils/FileStorage/: index.ts
server_dashboard_wasm/: Cargo.toml  package-lock.json  package.json
server_dashboard_wasm/pkg/: package.json
server_dashboard_wasm/src/: app.rs  customer.rs  group.rs  lib.rs  utils.rs
