[package]
name = "server_dashboard_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
server_api_common = {git="ssh://git@github.com/sentclose/sentc-api.git", rev = "14dfebc45342bd02b79f61fefa4a8743d9270cfa"}
#server_api_common = {path = "../../sentc-api/server_crates/server_api_common"} # for local dev

# to get it from ssh: write this in your ~/.cargo/config.toml:
# [net]
# git-fetch-with-cli = true
sentc-crypto-light = {git = "ssh://git@github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313"}
sentc-crypto-utils = {git = "ssh://git@github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313", features = ["wasm"]}

# wasm dep
getrandom = { version = "0.2", features = ["js"] }
sha2 = { version = "0.10", default-features = false }

# use the exact version
wasm-bindgen = {version = "=0.2.81", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.31"

serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
codegen-units = 1