[package]
name = "server_dashboard_wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
server_dashboard_common = { git = "https://git@github.com/sentclose/sentc-api.git", rev = "8c7cc7e3cb86451b1278e8b2a49ce071fc0ef236" }
#server_dashboard_common = {path = "../../sentc-api/server_crates/server_dashboard_common"} # for local dev

sentc-crypto-light = { git = "https://github.com/sentclose/sentc.git", rev = "b61a3483c6d75752104d00ff475824dc12358346", features = ["server_test", "export"] }
sentc-crypto-utils = { git = "https://github.com/sentclose/sentc.git", rev = "b61a3483c6d75752104d00ff475824dc12358346", features = ["wasm"] }

# wasm dep
getrandom = { version = "0.2", features = ["js"] }
sha2 = { version = "0.10", default-features = false }

# use the exact version
wasm-bindgen = { version = "=0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.31"

serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
codegen-units = 1